--- a/microservice-gateway-opaque/pom.xml
+++ b/microservice-gateway-opaque/pom.xml
@@ -9,51 +9,26 @@
         <version>2.0.0.RELEASE</version>
     </parent>
 
-    <artifactId>microservice-oauth2</artifactId>
+    <artifactId>microservice-gateway-opaque</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
 
+        <!-- Spring Cloud-->
         <dependency>
-            <groupId>com.vip</groupId>
-            <artifactId>microservice-oauth2-api</artifactId>
-            <version>${project.parent.version}</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
-
-        <!-- Project -->
-        <dependency>
-            <groupId>com.vip</groupId>
-            <artifactId>microservice-starter</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>com.vip</groupId>-->
-<!--            <artifactId>oauth2-spring-boot-starter</artifactId>-->
-<!--            <version>${project.parent.version}</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-oauth2-authorization-server</artifactId>
-        </dependency>
-
-        <!--freemarker-->
+        <!-- Spring Oauth2 Resource -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.vip</groupId>
-            <artifactId>microservice-commons-core</artifactId>
-            <version>${project.parent.version}</version>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
         <!-- redis 引入 -->
@@ -63,11 +38,25 @@
             <version>${project.parent.version}</version>
         </dependency>
 
-        <!-- Google Auth -->
+        <!-- Project -->
         <dependency>
-            <groupId>com.warrenstrange</groupId>
-            <artifactId>googleauth</artifactId>
+            <groupId>com.vip</groupId>
+            <artifactId>microservice-starter</artifactId>
+            <version>${project.parent.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springdoc</groupId>
+                    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+        <!-- for swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+        </dependency>
+        <!-- for swagger -->
 
     </dependencies>
 
