--- a/microservice-oauth2-jwt/pom.xml
+++ b/microservice-oauth2-jwt/pom.xml
@@ -34,8 +34,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-oauth2-authorization-server</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
         </dependency>
 
         <!--freemarker-->
