--- a/microservice-parent/pom.xml
+++ b/microservice-parent/pom.xml
@@ -9,15 +9,15 @@
     <packaging>pom</packaging>
 
     <properties>
-        <spring-boot.version>3.0.5</spring-boot.version>
-        <spring-cloud.version>2022.0.0</spring-cloud.version>
-        <spring-cloud-alibaba.version>2022.0.0.0-RC1</spring-cloud-alibaba.version>
-        <oauth2-authorization-server.version>1.0.1</oauth2-authorization-server.version>
+        <spring-boot.version>3.1.3</spring-boot.version>
+        <spring-cloud.version>2022.0.4</spring-cloud.version>
+        <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
+<!--        <oauth2-authorization-server.version>1.1.2</oauth2-authorization-server.version>-->
 
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
-        <pagehelper.version>1.4.3</pagehelper.version>
+        <pagehelper.version>1.4.7</pagehelper.version>
         <alibaba-druid.version>1.1.14</alibaba-druid.version>
-        <alibaba-easyexcel.version>3.1.1</alibaba-easyexcel.version>
+        <alibaba-easyexcel.version>3.3.2</alibaba-easyexcel.version>
         <redisson.version>3.11.3</redisson.version>
         <google-guava.version>31.1-jre</google-guava.version>
         <okhttp3.version>4.9.3</okhttp3.version>
@@ -25,7 +25,8 @@
         <nimbus.version>9.9.1</nimbus.version>
         <springdoc.version>2.1.0</springdoc.version>
         <persistence-api.version>2.2</persistence-api.version>
-        <hutool.version>5.8.16</hutool.version>
+        <hutool.version>5.8.21</hutool.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
         <commons.text.version>1.10.0</commons.text.version>
         <commons.io.version>2.11.0</commons.io.version>
         <google.auth.version>1.5.0</google.auth.version>
@@ -61,11 +62,11 @@
             </dependency>
 
             <!-- Security Authorization Server -->
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-oauth2-authorization-server</artifactId>
-                <version>${oauth2-authorization-server.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.security</groupId>-->
+<!--                <artifactId>spring-security-oauth2-authorization-server</artifactId>-->
+<!--                <version>${oauth2-authorization-server.version}</version>-->
+<!--            </dependency>-->
 
             <!-- Okhttp3  -->
             <dependency>
@@ -150,6 +151,18 @@
                 <version>${hutool.version}</version>
             </dependency>
 
+            <!-- mapstruct-->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+
             <!-- apache -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -199,6 +212,24 @@
                         <source>17</source>
                         <target>17</target>
                         <showWarnings>true</showWarnings>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.mapstruct</groupId>
+                                <artifactId>mapstruct-processor</artifactId>
+                                <version>${mapstruct.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>1.18.22</version>
+                            </path>
+                            <!-- This is needed when using Lombok 1.18.16 and above -->
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok-mapstruct-binding</artifactId>
+                                <version>0.2.0</version>
+                            </path>
+                        </annotationProcessorPaths>
                     </configuration>
                     <version>3.8.1</version>
                 </plugin>
